# DER_Book_Codes

./: Beam_Model_Neural_Network_Energy.ipynb  README.md  README_MAIN.txt
DER_Book_Examples/Four_node_Jacobian_verification/: 00README_First.txt  Main.m  computeMaterialDirectors.m  computeTangent.m  computeTimeParallel.m  crossMat.m  getFb.m  getFg.m  getFs.m  getFt.m  getRefTwist.m  getkappaBar.m  objfun.m  parallel_transport.m  rotateAxisAngle.m  signedAngle.m
DER_Book_Examples/ch1_cantilever/: 00README_First.txt  GenerateFig_ch1_cantilever.m  cantileverBVP.m  hangingrodtransient.mat
DER_Book_Examples/ch1_cantilever/datafiles/: hangingRod_l_0.1_nv_1000.txt  hangingRod_l_0.1_nv_20.txt  hangingRod_l_0.1_nv_5.txt
DER_Book_Examples/ch1_helixTerminalMoment/Part1_Compare_HelixShape/: 00README_First.txt  Step1_GetHelixParams.m  Step2_GenerateFig_ch1_helixTerminalMoment.m  getTransformed.m  helixDistance.m  helixDistanceDirection.m  helixDistanceOrigin.m  helixParams.mat  kirchoffrodexact.mat
DER_Book_Examples/ch1_helixTerminalMoment/Part2_PlotTwist/: 00README_First.txt  GenerateFig_ch1_helixTerminalMoment.m  RodUnderMoment.m  fcn_RotationFromTwoVectors.m
DER_Book_Examples/ch5_helixUncoiling/: 00README_First.txt  GenerateFig_ch4_helixUncoiling.m
DER_Book_Examples/ch8_vibratingCable/: 00README_First.txt  GenerateFigure_ch8_configuration.m  GenerateFigure_ch8_energy.m
DER_C++/: CMakeLists.txt
DER_C++/Apps/: CMakeLists.txt
DER_C++/Apps/BASimulator/: BASimulator.cc  BASimulator.hh  CMakeLists.txt  CreateProblemVector.inl
DER_C++/Apps/BASimulator/Problems/: Option.hh  ProblemBase.cc  ProblemBase.hh  ProblemBase.tcc  ch1_cantilever.cc  ch1_cantilever.hh  ch1_helixTerminalMoment.cc  ch1_helixTerminalMoment.hh  ch5_helixUncoiling.cc  ch5_helixUncoiling.hh  ch8_vibratingCable.cc  ch8_vibratingCable.hh
DER_C++/BASim/: BASim  Core  IO  Math  Physics  Render  Util
DER_C++/BASim/src/: CMakeLists.txt
DER_C++/BASim/src/Collisions/: BVHAABB.hh  CollisionUtils.cc  CollisionUtils.hh
DER_C++/BASim/src/Core/: Definitions.hh  EigenIncludes.hh  Handle.hh  Macros.hh  ObjectBase.hh  ObjectControllerBase.hh  ObjectControllerBase.inl  ObjectHandles.hh  Property.hh  STLIncludes.hh  Timer.cc  Timer.hh  TriangleMesh.hh  Util.hh
DER_C++/BASim/src/Core/TopologicalObject/: TopObjHandles.hh  TopObjIterators.hh  TopologicalObject.hh  TopologicalObject.inl  Topology.hh
DER_C++/BASim/src/IO/: ObjParser.cc  ObjParser.hh  RodTextFileParser.hh  SolverIO.hh  Tokenizer.hh  XMLSceneOutputter.hh  XMLSceneParser.hh
DER_C++/BASim/src/Math/: BandMatrix.hh  ConjugateGradient.hh  DiagonalPreconditioner.hh  FlensMatrix.hh  ImplicitEuler.hh  LinearSolverBase.hh  Math.hh  MatrixBase.hh  MatrixUtils.hh  PardisoMatrix.cc  PardisoMatrix.hh  Preconditioner.hh  SolverUtils.cc  SolverUtils.hh  StaticsSolver.hh  SymplecticEuler.hh  TimeSteppingBase.hh
DER_C++/BASim/src/Math/MKL/: LAPACKPrototypes.h  MKLLinearSolver.cc  MKLLinearSolver.hh
DER_C++/BASim/src/Math/Pardiso/: PardisoLinearSolver.cc  PardisoLinearSolver.hh
DER_C++/BASim/src/Math/Petsc/: PetscLinearSolver.hh  PetscMatrix.hh  PetscMatrix.inl  PetscUtils.hh
DER_C++/BASim/src/Physics/: DegreeOfFreedom.hh  PhysObject.hh  PhysObject.inl  World.hh
DER_C++/BASim/src/Physics/ElasticRods/: AnisotropicRod.cc  AnisotropicRod.hh  AnisotropicRodIncludes.hh  BridsonStepper.cc  BridsonStepper.hh  EdgeStencil.hh  ElasticRod.cc  ElasticRod.hh  ElasticRod.inl  Force.hh  MinimalRodStateBackup.cc  MinimalRodStateBackup.hh  MultipleRodTimeStepper.hh  ParallelStepper.cc  ParallelStepper.hh  RodAnisoBending.cc  RodAnisoBending.hh  RodAnisoForce.cc  RodAnisoForce.hh  RodBendingForce.cc  RodBendingForce.hh  RodBendingForceIncludes.hh  RodBendingForceSym.cc  RodBendingForceSym.hh  RodBoundaryCondition.cc  RodBoundaryCondition.hh  RodDampingFriction.cc  RodDampingFriction.hh  RodExternalForce.hh  RodForce.cc  RodForce.hh  RodGelForce.hh  RodGravity.hh  RodMassDamping.hh  RodRodExternalForce.hh  RodRodSpringForce.hh  RodStretchingForce.cc  RodStretchingForce.hh  RodTimeStepper.hh  RodTube.cc  (+10 more)
DER_C++/BASim/src/Physics/ElasticRods/Tests/: RodBendingTest.cc  RodBendingTest.hh  RodStretchingTest.hh  RodTwistingTest.hh  bendingEnergy.inl  bendingForce.inl  bendingJacobian.inl  mdefs.h  stretchingEnergy.inl  stretchingForce.inl  stretchingJacobian.inl  twistingEnergy.inl  twistingForce.inl  twistingJacobian.inl
DER_C++/BASim/src/Render/: Camera.cc  Camera.hh  Color.hh  OpenGLDecl.hh  OpenGLHeaders.hh  RenderBase.cc  RenderBase.hh  RenderUtils.hh  RodRenderer.cc  RodRenderer.hh  Scene.cc  Scene.hh  TrackBall.cc  TrackBall.hh  Translator.cc  Translator.hh  TriangleMeshRenderer.cc  TriangleMeshRenderer.hh  ViewController.cc  ViewController.hh  Zoomer.cc  Zoomer.hh
DER_C++/BASim/src/Render/YImage/: YImage.cc  YImage.hh
DER_C++/BASim/src/Util/: KeyedValue.hh  StringToolbox.hh  Utils.hh
DER_C++/BASim/src/externalForces/: dampingForce.hh  terminalLoads.hh
DER_C++/assets/: ch1_cantilever.txt  ch1_helixTerminalMoment.txt  ch5_helixUncoiling.txt  ch8_vibratingCable.txt
DER_C++/cmake/: FindMKL.cmake  FindMaya.cmake  FindTCLAP.cmake
DER_C++/doc/: Doxyfile.in
DER_C++/doc/.svn/: entries
DER_C++/doc/.svn/text-base/: CMakeLists.txt.svn-base  Mainpage.dox.in.svn-base
